database translation courses and updated tests